# ptyctl

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.sh
.github/workflows/: release.yml
dev-notes/: ptyctl-mcp-pty-plan.md
dev-notes/PRD/: requestments-codex.md  session-manager.md  telnet-spec.md
docs/: usage.md  usage.zh-CN.md
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  version.rs
src/session/: buffer.rs  mod.rs  ssh.rs  telnet.rs
tests/: mcp_http.rs  mcp_stdio.rs  telnet_integration.rs
