[package]
name = "ptyctl"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "tokio", "http1"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
portable-pty = "0.8"
regex = "1"
rmcp = { version = "0.8.0", features = ["macros", "server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
rmcp = { version = "0.8.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
